[package]
name = "cli_unicron"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
crossterm = "0.29.0"
dirs = "6.0.0"
dotenv = "0.15.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"]}
url = "2.5.7"
